# S1130-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
crates/s1130-core/: Cargo.toml
crates/s1130-core/src/: assembler.rs  cpu.rs  devices.rs  error.rs  instructions.rs  lib.rs
crates/s1130-core/src/assembler/: lexer.rs  mod.rs  parser.rs  symbols.rs
crates/s1130-core/src/cpu/: executor.rs  memory.rs  mod.rs  registers.rs  state.rs
crates/s1130-core/src/devices/: card_reader.rs  keyboard.rs  printer.rs
crates/s1130-core/tests/: assembler_integration_tests.rs  assembler_tests.rs  console_echo_tests.rs  instruction_deck_tests.rs  instruction_execution_tests.rs  simple_xio_test.rs
crates/s1130-ui/: Cargo.toml  Trunk.toml  build.rs  index.html  styles.css
crates/s1130-ui/src/: app.rs  cpu_context.rs  main.rs
crates/s1130-ui/src/components/: assembler.rs  console.rs  console_panel.rs  footer.rs  header.rs  io_devices.rs  memory.rs  mod.rs  registers.rs  sidebar.rs  tabs.rs
crates/s1130-ui/static/: styles.css
crates/s1130-wasm/: Cargo.toml
crates/s1130-wasm/src/: lib.rs
docs/: architecture.md  research.md  test-session-summary.md  use-cases.md
docs-rs/: PRD.md  design.md  plan.md
scripts/: build.sh  serve.sh
