[package]
name = "s1130-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Yew-based web UI for S1130 emulator"

[dependencies]
s1130-wasm = { path = "../s1130-wasm" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
gloo = "0.11"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
chrono = "0.4"
hostname = "0.4"
