[package]
name = "s1130-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WASM bindings for S1130 emulator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
s1130-core = { path = "../s1130-core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
